<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="android_sdk_download">Download</string>
    <string name="android_sdk_exit"><u>Quit</u></string>
    <string name="android_sdk_exit_confirm">Do you want to exit?</string>
    <string name="android_sdk_expired">Expired</string>
    <string name="android_sdk_guess_you_like">You may like this game</string>
    <string name="android_sdk_more">More Games</string>
    <string name="android_sdk_return">Return</string>
    <string name="app_name">跑酷-白包</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="banner_placeholder">Search IVY in Google Play Store to get more addictive games.</string>
    <string name="banner_title_placeholder">Find more games</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="default_web_client_id">686749881023-3dd0b846gaukpsqjkp96q5fj0booief8.apps.googleusercontent.com</string>
    <string name="facebook_app_id" />
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_hint">Thanks for your feedback. We will try our best to resolve this issue. If you want talk to us directly, please </string>
    <string name="firebase_database_url">https://templeprincessendlessrun.firebaseio.com</string>
    <string name="game_view_content_description">Game view</string>
    <string name="gcm_defaultSenderId">686749881023</string>
    <string name="gms_games_app_id" />
    <string name="google_admob_application_id" />
    <string name="google_api_key">AIzaSyDWm5zl1Eq4HQSFVg9xfXI9R0jbxz_X2qE</string>
    <string name="google_app_id">1:686749881023:android:9a99b70ecf4b275e0a6c0a</string>
    <string name="google_crash_reporting_api_key">AIzaSyDWm5zl1Eq4HQSFVg9xfXI9R0jbxz_X2qE</string>
    <string name="google_leaderboard_not_available">Google leaderboards not available on this device.</string>
    <string name="google_play_service_appid">847297611955</string>
    <string name="google_signin_other_error">Google Sign in Error</string>
    <string name="google_signin_title">Google Sign In</string>
    <string name="google_storage_bucket">templeprincessendlessrun.appspot.com</string>
    <string name="hs_addreply_hint">Reply</string>
    <string name="hs_article">Article</string>
    <string name="hs_articles_title">FAQ</string>
    <string name="hs_clear">Clear</string>
    <string name="hs_done">Done</string>
    <string name="hs_error">Error</string>
    <string name="hs_error_check_network_connection">Please check your network connection</string>
    <string name="hs_error_fetching_articles">Error in fetching Articles</string>
    <string name="hs_error_fetching_articles_issues">Error in fetching Articles and Issues</string>
    <string name="hs_error_fetching_ticket_updates">Error in fetching ticket updates</string>
    <string name="hs_error_posting_reply">Error in posting your reply, please check your network connection</string>
    <string name="hs_help_title">Help</string>
    <string name="hs_issues_title">Tickets</string>
    <string name="hs_me">Me</string>
    <string name="hs_search">Search</string>
    <string name="hs_search_hint">Search Articles</string>
    <string name="hs_sendbutton_title">Send</string>
    <string name="hs_staff">Staff</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">"You'll get a notification with the link when you're back online"</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">"We'll send you a notification with a link to the advertiser site."</string>
    <string name="offline_opt_in_title">"Open ad when you're back online."</string>
    <string name="ok">OK</string>
    <string name="please_write">Write your feedback.</string>
    <string name="project_id">templeprincessendlessrun</string>
    <string name="promotion_skip_format">Skip | %s</string>
    <string name="reward_loading_title">Loading Offers…</string>
    <string name="reward_video_load_failed">No reward video available now, please try again later.</string>
    <string name="risesdk_ad_disabled">Thanks for your support, Ad will be not displayed.</string>
    <string name="risesdk_gameactivity_title">Download these apps for free</string>
    <string name="risesdk_install">Play</string>
    <string name="risesdk_payment_received">Thanks for your payment!</string>
    <string name="risesdk_reward_install">Install</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="send_feedback">Send</string>
    <string name="send_feedback_two">Send Feedback</string>
    <string name="show_saved_game_title">Show My Game Savings</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="submit_feedback_error">Sorry, not able to submit this feedback, please try again later.</string>
    <string name="submit_feedback_processing">Submitting Your Feedback...</string>
    <string name="text_connect_facebook">connect us on Facebook</string>
    <string name="transaction_cannot_be_completed">Transaction cannot be completed.</string>
    <string name="user_survey">Help us improve</string>
</resources>
