<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="60.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:gravity="center" android:id="@id/native_icon_view" android:layout_width="60.0dip" android:layout_height="fill_parent" android:src="@drawable/ad_icon_placeholder" android:scaleType="centerCrop" android:adjustViewBounds="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" />
    <ImageView android:id="@id/adLabel" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/ad_label" android:contentDescription="" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="62.0dip" android:paddingRight="83.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerVertical="true" android:paddingStart="62.0dip" android:paddingEnd="83.0dip">
        <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ff0000ff" android:ellipsize="end" android:id="@id/native_ad_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/banner_title_placeholder" android:lines="1" />
        <TextView android:textSize="12.0sp" android:textColor="@color/button_text_style_grey" android:ellipsize="end" android:id="@id/native_ad_desc" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/banner_placeholder" />
    </LinearLayout>
    <Button android:textSize="12.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/native_ad_call_to_action" android:background="@drawable/select_text_ad" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="80.0dip" android:layout_height="fill_parent" android:text="@string/risesdk_install" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
</RelativeLayout>