<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#e8000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:tag="_animation" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:tag="title" android:layout_width="fill_parent" android:layout_height="30.0dip" android:text="@string/android_sdk_exit_confirm" android:ems="16" />
        <FrameLayout android:layout_gravity="center_horizontal" android:layout_width="305.0dip" android:layout_height="495.0dip">
            <androidx.viewpager.widget.ViewPager android:layout_gravity="center" android:tag="pager" android:layout_width="280.0dip" android:layout_height="470.0dip" />
            <ImageView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/android_sdk_dialog_frame" android:contentDescription="@null" />
            <ImageView android:layout_gravity="center|right|top" android:tag="closebtn" android:background="@drawable/android_sdk_btn_close" android:layout_width="28.0dip" android:layout_height="28.0dip" android:contentDescription="@null" />
        </FrameLayout>
        <com.ivy.ads.ui.PagerIndicator android:layout_gravity="bottom" android:tag="indicator" android:layout_width="fill_parent" android:layout_height="12.0dip" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="bottom" android:orientation="horizontal" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:layout_alignParentBottom="true">
        <TextView android:textColor="#ff888888" android:gravity="center" android:tag="yesbtn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/android_sdk_exit" android:layout_weight="9.0" />
        <Button android:textColor="#ffffffff" android:layout_gravity="center" android:tag="morebtn" android:background="@drawable/android_sdk_download_bg" android:layout_width="0.0dip" android:layout_height="32.0dip" android:layout_marginLeft="15.0dip" android:text="@string/android_sdk_more" android:layout_weight="20.0" />
    </LinearLayout>
</RelativeLayout>